--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
                 <configuration>
                     <url>jdbc:mysql://localhost:3307/store_2?createDatabaseIfNotExist=true</url>
                     <user>root</user>
-                    <password>Hunter_25_36</password>
+                    <password>query</password>
                     <cleanDisabled>false</cleanDisabled>
                 </configuration>
             </plugin>
