--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,6 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3307/store_2?createDatabaseIfNotExist=true
     username: root
-    password: Hunter_25_36
+    password: query
   jpa:
     show-sql: true
