--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,5 +9,10 @@ spring:
     show-sql: true
   jwt:
     secret: ${JWT_SECRET}
-    accessTokenExpiration: 900 #5min
+    accessTokenExpiration: 7200 #2H
     refreshTokenExpiration : 604800 #7days
+  stripe:
+    secretKey : ${STRIPE_SECRET_KEY}
+    webhookSecretKey : ${STRIPE_WEBHOOK_SECRET_KEY}
+
+  websiteUrl: http://localhost:4242
