--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,13 @@
 spring:
   application:
     name: shopping_cart
-  datasource:
-    url: jdbc:mysql://localhost:3307/store_2?createDatabaseIfNotExist=true
-    username: root
-    password: query
-  jpa:
-    show-sql: true
+
   jwt:
     secret: ${JWT_SECRET}
-    accessTokenExpiration: 7200 #2H
+    accessTokenExpiration: 900 #15mins
     refreshTokenExpiration : 604800 #7days
+  profiles:
+    active: dev
   stripe:
     secretKey : ${STRIPE_SECRET_KEY}
     webhookSecretKey : ${STRIPE_WEBHOOK_SECRET_KEY}
-
-  websiteUrl: http://localhost:4242
